# arithmetic-formatter-fcc

./: README.md  arithmetic_arranger.py  main.py  pyproject.toml  test_module.py
