[tool.poetry]
name = "arithmetic-formatter-fcc"
version = "0.1.0"
description = "Arithmetic Formatter project for freeCodeCamp's Scientific Computing with Python."
authors = ["Tiago Rocha Cunha"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
